# frigatev2

./: .gitignore  Makefile  README.md  aa  ast.cpp  ast.h  circuit-parser.cpp  circuit.h  circuitoutput.cpp  circuitoutput.h  gcc_Debug.h  gcc_Release.h  innerfunction.cpp  innerfunction.h  inputs.txt  interpreter.h  interpretermain.cpp  location.hh  main.cpp  make.get  out  outDP  parser.cc  parser.hh  position.hh  scanner.cc  stack.hh  variable.cpp  variable.h  wire.cpp  wire.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/circuit/: circuit-parser.cpp  circuit.h
src/commit/: bit-commit-scheme-rec.cpp  bit-commit-scheme-rec.h  bit-commit-scheme-snd.cpp  bit-commit-scheme-snd.h  bit-commit-scheme.cpp  bit-commit-scheme.h  commit-scheme-rec.cpp  commit-scheme-rec.h  commit-scheme-snd.cpp  commit-scheme-snd.h  commit-scheme.cpp  commit-scheme.h  ecc.h
src/dot/: alsz-dot-ext-rec.cpp  alsz-dot-ext-rec.h  alsz-dot-ext-snd.cpp  alsz-dot-ext-snd.h  alsz-dot-ext.cpp  alsz-dot-ext.h
src/duplo/: duplo-constructor.cpp  duplo-constructor.h  duplo-evaluator.cpp  duplo-evaluator.h  duplo.cpp  duplo.h
src/frigate-duplo/: frigate-duplo-constructor.cpp  frigate-duplo-constructor.h  frigate-duplo-evaluator.cpp  frigate-duplo-evaluator.h  frigate-duplo.cpp  frigate-duplo.h
src/garbling/: const-garbled-circuit.cpp  const-garbled-circuit.h  eval-garbled-circuit.cpp  eval-garbled-circuit.h  garbled-circuit.cpp  garbled-circuit.h  garbling-handler.cpp  garbling-handler.h
src/mains/: commit-rec-main.cpp  commit-snd-main.cpp  duplo-const-main.cpp  duplo-eval-main.cpp  mains.h  mpc-outsourcing-const.cpp  mpc-outsourcing-eval.cpp  outsourcing-mains.h  tiny-const-main.cpp  tiny-eval-main.cpp
src/prg/: random.cpp
src/tiny/: params.cpp  params.h  tiny-constructor.cpp  tiny-constructor.h  tiny-evaluator.cpp  tiny-evaluator.h  tiny.h
src/util/: byte-array-vec.cpp  byte-array-vec.h  channel.cpp  channel.h  common-tools.cpp  common-tools.h  filenames.h  global-constants.h  network.cpp  network.h  sha1.h  sha_asm.c  sha_generic.c  storage.cpp  storage.h  typedefs.h  util.h
test/: CMakeLists.txt  Makefile  cmake_install.cmake  test-circuit-parser.cpp  test-commitment.cpp  test-dot.cpp  test-duplo-aes-correctness.cpp  test-duplo-eval.cpp  test-duplo-inp-buckets.cpp  test-duplo-preprocess-aux-data.cpp  test-duplo-preprocess-bucketing.cpp  test-duplo-setup.cpp  test-duplo-soldering.cpp  test-duplo.h  test-garbled-circuit.cpp  test-timings.cpp
test/data/: AES-expanded.txt  AES-non-expanded.txt  DES-expanded.txt  DES-non-expanded.txt  adder_32bit.txt  adder_64bit.txt  and.txt  comparator_32bit_signed_lteq.txt  comparator_32bit_unsigned_lt.txt  comparator_32bit_unsigned_lteq.txt  id_i128_k128_s127.txt  id_i128_k128_s128.txt  md5.txt  mult_32x32.txt  sha-1.txt  tag_i128_k128_s127.txt  tag_i128_k128_s128.txt
tests/: aes.wir_f2.ffrig  arrayinit.wir.dpGC  arrayinit.wir.dpIO  arrayinit.wir_cul.mfrig  arrayinit.wir_f0.ffrig  arrayinit.wir_otype.mfrig  hamming.wir  hamming.wir.dpGC  hamming.wir.dpIO  hamming.wir_cul.mfrig  hamming.wir_f0.ffrig  hamming.wir_f1.ffrig  hamming.wir_otype.mfrig  matrixmult3x3.wir  matrixmult3x3.wir.dpGC  matrixmult3x3.wir.dpIO  matrixmult3x3.wir_cul.mfrig  matrixmult3x3.wir_f1.ffrig  matrixmult3x3.wir_otype.mfrig  matrixmult5x5.wir.dpGC  matrixmult5x5.wir.dpIO  matrixmult5x5.wir_f0.ffrig  matrixmult5x5.wir_f1.ffrig  mil.wir  mil.wir_cul.mfrig  mil.wir_f0.ffrig  mil.wir_otype.mfrig  mult256.wir  mult256.wir_cul.mfrig  mult256.wir_f0.ffrig  mult256.wir_otype.mfrig  newhamming.wir  newhamming.wir_cul.mfrig  newhamming.wir_f0.ffrig  newhamming.wir_f1.ffrig  newhamming.wir_otype.mfrig  rsa1024.wir  rsa64.wir  rsa64.wir.dpGC  rsa64.wir_cul.mfrig  (+53 more)
tests/dp/: AES_SBox (copy).txt  AES_SBox.txtGC  SLP_AES_113.txtGC  aes backup  aes.wir  aes.wir.GC  aes.wir.GC_bristol  aes.wir.GC_bristolXORAND  aes.wir.GC_duplo  aes.wir.GC_duplo_function_1  aes.wir.GC_duplo_function_2  aes.wir.GC_duplo_function_3  aes.wir.GC_duplo_function_4  aes.wir.GC_duplo_function_5  aes.wir.GC_duplo_function_6  aes.wir.GC_duplo_function_test  aes.wir.GC_duplo_function_test0  aes.wir.GC_duplo_function_test1  aes.wir.GC_duplo_function_test2  aes.wir.GCdp  aes2.wir  (+114 more)
(+15 files in other folders)
